java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCastOrMethodInvocation58494b.pass
package org.netbeans.test.java.hints;

import javax.swing.JButton;
import org.netbeans.test.java.hints.*;

/**
 * @author leon chiver
 */
public class CastOrMethodInvocation58494b {
    
    public CastOrMethodInvocation58494b() {
        Object o = null;
        CastOrMethodInvocation58494b.doStuff((JButton) o);
    }

    public static void doStuff(JButton b) {
        
    }
}
